<resources>
    <string name="app_name">MyRemainderApplication</string>
    <string name="mamber_id">Mamber Id</string>
    <string name="password">Password</string>
    <string name="forget_password"><![CDATA[Forget Password >]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="zip_code">Zip Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_friend">+ \n Add Friend</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>

    <string name="please_enter_name">please enter Name</string>
    <string name="please_enter_mobile_Number">please enter Mobile Number</string>
    <string name="please_enter_valid_mobile_number">please enter valid Mobile Number</string>
    <string name="please_enter_email_id">please enter Email Id</string>
    <string name="please_enter_valid_email_id">please enter valid Email Id</string>
    <string name="please_enter_password">please enter Password</string>
    <string name="please_enter_confirm_password">please enter Confirm Password</string>
    <string name="please_enter_valid_confirm_password">Password and Confirm Password not match</string>
    <string name="add_photo">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="myimages">MyImages</string>
    <string name="friend_request_sent">Friend Request Sent</string>
    <string name="friend">Friend</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="friends">Friends</string>
</resources>
